--- a/app/templates/components/public/base.html
+++ b/app/templates/components/public/base.html
@@ -13,7 +13,8 @@
     {% include 'components/public/includes/fonts.html' %}
 
     <!-- Styles -->
-    {% include 'components/public/includes/styles.html' %} {% block stylesheet %}{% endblock %}
+    {% include 'components/public/includes/styles.html' %} {% block stylesheet
+    %}{% endblock %}
   </head>
   <body>
     <!-- Navbar -->
@@ -27,6 +28,7 @@
     <!-- End of Footer -->
 
     <!-- Scripts -->
-    {% include 'components/public/includes/scripts.html' %} {% block javascript %}{% endblock %}
+    {% include 'components/public/includes/scripts.html' %} {% block javascript
+    %}{% endblock %}
   </body>
 </html>
