--- a/app/templates/control_panel/account/profile_form.html
+++ b/app/templates/control_panel/account/profile_form.html
@@ -23,7 +23,8 @@
             <form method="POST">
               {{ form.hidden_tag() }}
               <div class="mb-3">
-                {{ form.name.label(class="form-label") }} {% if form.name.errors %} {{ form.name(class="form-control is-invalid") }}
+                {{ form.name.label(class="form-label") }} {% if form.name.errors
+                %} {{ form.name(class="form-control is-invalid") }}
                 <div class="invalid-feedback">
                   {% for error in form.name.errors %}
                   <span>{{ error }}</span>
@@ -32,7 +33,9 @@
                 {% else %} {{ form.name(class="form-control") }} {% endif %}
               </div>
               <div class="mb-3">
-                {{ form.gender.label(class="form-label") }} {% if form.gender.errors %} {{ form.gender(class="form-select is-invalid") }}
+                {{ form.gender.label(class="form-label") }} {% if
+                form.gender.errors %} {{ form.gender(class="form-select
+                is-invalid") }}
                 <div class="invalid-feedback">
                   {% for error in form.gender.errors %}
                   <span>{{ error }}</span>
@@ -41,7 +44,9 @@
                 {% else %} {{ form.gender(class="form-select") }} {% endif %}
               </div>
               <div class="mb-3">
-                {{ form.phone.label(class="form-label") }} {% if form.phone.errors %} {{ form.phone(class="form-control is-invalid") }}
+                {{ form.phone.label(class="form-label") }} {% if
+                form.phone.errors %} {{ form.phone(class="form-control
+                is-invalid") }}
                 <div class="invalid-feedback">
                   {% for error in form.phone.errors %}
                   <span>{{ error }}</span>
@@ -50,7 +55,9 @@
                 {% else %} {{ form.phone(class="form-control") }} {% endif %}
               </div>
               <div class="mb-3">
-                {{ form.email.label(class="form-label") }} {% if form.email.errors %} {{ form.email(class="form-control is-invalid") }}
+                {{ form.email.label(class="form-label") }} {% if
+                form.email.errors %} {{ form.email(class="form-control
+                is-invalid") }}
                 <div class="invalid-feedback">
                   {% for error in form.email.errors %}
                   <span>{{ error }}</span>
@@ -58,8 +65,15 @@
                 </div>
                 {% else %} {{ form.email(class="form-control") }} {% endif %}
               </div>
-              <div class="d-flex flex-row justify-content-end align-items-center column-gap-2">
-                <a class="btn btn-secondary rounded-5 py-1 px-3" href="{{ url_for('control_panel_app.profile', id=current_user.id) }}" role="button">Batal</a>
+              <div
+                class="d-flex flex-row justify-content-end align-items-center column-gap-2"
+              >
+                <a
+                  class="btn btn-secondary rounded-5 py-1 px-3"
+                  href="{{ url_for('control_panel_app.profile', id=current_user.id) }}"
+                  role="button"
+                  >Batal</a
+                >
                 {{ form.submit(class="btn btn-success rounded-5 py-1 px-3") }}
               </div>
             </form>
