--- a/app/templates/public/services/usage_help/usage-help_form.html
+++ b/app/templates/public/services/usage_help/usage-help_form.html
@@ -1,11 +1,14 @@
-{% extends 'components/public/base.html' %} {% set active_page = 'usage_help' %} {% block content %}
+{% extends 'components/public/base.html' %} {% set active_page = 'usage_help' %}
+{% block content %}
 <!-- Banner -->
 <div class="banner d-flex bg-hero h-20rem">
   <div class="container my-auto">
     <div class="row justify-content-center align-items-center">
       <div class="col-lg-10">
         <div class="text-white text-center">
-          <h2 class="fw-bold fs-3 title-clamp-2 mb-0">{{ operation }} Bantuan Penggunaan</h2>
+          <h2 class="fw-bold fs-3 title-clamp-2 mb-0">
+            {{ operation }} Bantuan Penggunaan
+          </h2>
         </div>
       </div>
     </div>
@@ -20,15 +23,36 @@
       <div class="col-lg-10">
         <div class="d-flex flex-column row-gap-3">
           <nav aria-label="breadcrumb">
-            <ol class="breadcrumb justify-content-center align-items-center mb-0">
-              <li class="breadcrumb-item"><a class="link-dark link-offset-2 link-underline-opacity-0 link-underline-opacity-100-hover" href="{{ url_for('public_app.services') }}">Layanan</a></li>
-              <li class="breadcrumb-item"><a class="link-dark link-offset-2 link-underline-opacity-0 link-underline-opacity-100-hover" href="{{ url_for('public_app.usage_help') }}">Bantuan Penggunaan</a></li>
-              <li class="breadcrumb-item active" aria-current="page">{{ operation }} Bantuan Penggunaan</li>
+            <ol
+              class="breadcrumb justify-content-center align-items-center mb-0"
+            >
+              <li class="breadcrumb-item">
+                <a
+                  class="link-dark link-offset-2 link-underline-opacity-0 link-underline-opacity-100-hover"
+                  href="{{ url_for('public_app.services') }}"
+                  >Layanan</a
+                >
+              </li>
+              <li class="breadcrumb-item">
+                <a
+                  class="link-dark link-offset-2 link-underline-opacity-0 link-underline-opacity-100-hover"
+                  href="{{ url_for('public_app.usage_help') }}"
+                  >Bantuan Penggunaan</a
+                >
+              </li>
+              <li class="breadcrumb-item active" aria-current="page">
+                {{ operation }} Bantuan Penggunaan
+              </li>
             </ol>
           </nav>
           {% if current_user.role == "admin" %}
           <div class="text-center">
-            <a class="btn btn-success rounded-5 py-1 px-3" href="{{ url_for('public_app.create_usage_help') }}" role="button">Tambah</a>
+            <a
+              class="btn btn-success rounded-5 py-1 px-3"
+              href="{{ url_for('public_app.create_usage_help') }}"
+              role="button"
+              >Tambah</a
+            >
           </div>
           {% endif %}
         </div>
@@ -41,7 +65,9 @@
             <form enctype="multipart/form-data" method="POST">
               {{ form.hidden_tag() }}
               <div class="mb-3">
-                {{ form.title.label(class="form-label") }} {% if form.title.errors %} {{ form.title(class="form-control is-invalid") }}
+                {{ form.title.label(class="form-label") }} {% if
+                form.title.errors %} {{ form.title(class="form-control
+                is-invalid") }}
                 <div class="invalid-feedback">
                   {% for error in form.title.errors %}
                   <span>{{ error }}</span>
@@ -50,28 +76,53 @@
                 {% else %} {{ form.title(class="form-control") }} {% endif %}
               </div>
               <div class="mb-3">
-                {{ form.description.label(class="form-label") }} {% if form.description.errors %} {{ form.description(class="form-control is-invalid") }}
+                {{ form.description.label(class="form-label") }} {% if
+                form.description.errors %} {{
+                form.description(class="form-control is-invalid") }}
                 <div class="invalid-feedback">
                   {% for error in form.description.errors %}
                   <span>{{ error }}</span>
                   {% endfor %}
                 </div>
-                {% else %} {{ form.description(class="form-control") }} {% endif %}
+                {% else %} {{ form.description(class="form-control") }} {% endif
+                %}
               </div>
               <div class="mb-3">
-                {{ form.image.label(class="form-label") }} {% if form.image.errors %} {{ form.image(class="form-control is-invalid", type="file") }}
+                {{ form.image.label(class="form-label") }} {% if
+                form.image.errors %} {{ form.image(class="form-control
+                is-invalid", type="file") }}
                 <div class="invalid-feedback">
                   {% for error in form.image.errors %}
                   <span>{{ error }}</span>
                   {% endfor %}
                 </div>
-                {% else %} {{ form.image(class="form-control", type="file") }} {% endif %}
+                {% else %} {{ form.image(class="form-control", type="file") }}
+                {% endif %}
               </div>
-              <div class="d-flex flex-row justify-content-end align-items-center column-gap-2">
-                <a class="btn btn-secondary rounded-5 py-1 px-3" href="{{ url_for('public_app.usage_help') }}" role="button">Batal</a>
+              <div class="mb-3">
+                {{ form.body.label(class="form-label") }} {% if form.body.errors
+                %} {{ form.body(class="form-control is-invalid") }}
+                <div class="invalid-feedback">
+                  {% for error in form.body.errors %}
+                  <span>{{ error }}</span>
+                  {% endfor %}
+                </div>
+                {% else %} {{ form.body(class="form-control") }} {% endif %}
+              </div>
+              <div
+                class="d-flex flex-row justify-content-end align-items-center column-gap-2"
+              >
+                <a
+                  class="btn btn-secondary rounded-5 py-1 px-3"
+                  href="{{ url_for('public_app.usage_help') }}"
+                  role="button"
+                  >Batal</a
+                >
                 {{ form.submit(class="btn btn-success rounded-5 py-1 px-3") }}
               </div>
             </form>
+            {{ ckeditor.load(pkg_type='basic') }} {{
+            ckeditor.config(name='body', height=300) }}
           </div>
         </div>
       </div>
@@ -79,4 +130,9 @@
   </div>
 </div>
 <!-- End of Page Wrapper -->
+{% endblock %} {% block javascript %}
+<script>
+  CKEDITOR.config.contentsCss =
+    "{{ url_for('static', filename='css/main.css') }}";
+</script>
 {% endblock %}
