--- a/app/templates/components/public/includes/navbar.html
+++ b/app/templates/components/public/includes/navbar.html
@@ -3,31 +3,89 @@
     <a class="navbar-brand" href="{{ url_for('public_app.homepage') }}">
       <h1 class="fw-bold fs-4 my-auto">Bondowoso Tourism</h1>
     </a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
+    <button
+      class="navbar-toggler"
+      type="button"
+      data-bs-toggle="offcanvas"
+      data-bs-target="#offcanvasNavbar"
+      aria-controls="offcanvasNavbar"
+    >
       <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="offcanvas offcanvas-end border-0" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
+    <div
+      class="offcanvas offcanvas-end border-0"
+      tabindex="-1"
+      id="offcanvasNavbar"
+      aria-labelledby="offcanvasNavbarLabel"
+    >
       <div class="offcanvas-header">
-        <h1 class="offcanvas-title fw-bold fs-4" id="offcanvasNavbarLabel">Bondowoso Tourism</h1>
-        <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+        <h1 class="offcanvas-title fw-bold fs-4" id="offcanvasNavbarLabel">
+          Bondowoso Tourism
+        </h1>
+        <button
+          type="button"
+          class="btn-close"
+          data-bs-dismiss="offcanvas"
+          aria-label="Close"
+        ></button>
       </div>
       <div class="offcanvas-body">
         <ul class="navbar-nav me-auto">
           <li class="nav-item">
-            <a class="{{ 'nav-link active' if active_page == 'home' else 'nav-link' }}" aria-current="page" href="{{ url_for('public_app.homepage') }}">Beranda</a>
+            <a
+              class="{{ 'nav-link active' if active_page == 'home' else 'nav-link' }}"
+              aria-current="page"
+              href="{{ url_for('public_app.homepage') }}"
+              >Beranda</a
+            >
           </li>
           <li class="nav-item">
-            <a class="{{ 'nav-link active' if active_page == 'about' else 'nav-link' }}" href="{{ url_for('public_app.about') }}">Tentang</a>
+            <a
+              class="{{ 'nav-link active' if active_page == 'about' else 'nav-link' }}"
+              href="{{ url_for('public_app.about') }}"
+              >Tentang</a
+            >
           </li>
           <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Layanan</a>
+            <a
+              class="nav-link dropdown-toggle"
+              href="#"
+              role="button"
+              data-bs-toggle="dropdown"
+              aria-expanded="false"
+              >Layanan</a
+            >
             <ul class="dropdown-menu">
-              <li><a class="{{ 'dropdown-item active' if active_page == 'usage_help' else 'dropdown-item' }}" href="{{ url_for('public_app.usage_help') }}">Bantuan Penggunaan</a></li>
+              <li>
+                <a
+                  class="{{ 'dropdown-item active' if active_page == 'usage_help' else 'dropdown-item' }}"
+                  href="{{ url_for('public_app.usage_help') }}"
+                  >Bantuan Penggunaan</a
+                >
+              </li>
               {% if current_user.role == "admin" %}
-              <li><a class="{{ 'dropdown-item active' if active_page == 'system_data' else 'dropdown-item' }}" href="{{ url_for('public_app.system_data') }}">Data Sistem</a></li>
+              <li>
+                <a
+                  class="{{ 'dropdown-item active' if active_page == 'system_data' else 'dropdown-item' }}"
+                  href="{{ url_for('public_app.system_data') }}"
+                  >Data Sistem</a
+                >
+              </li>
               {% endif %}
-              <li><a class="{{ 'dropdown-item active' if active_page == 'tour_list' else 'dropdown-item' }}" href="{{ url_for('public_app.tour_list') }}">Daftar Wisata</a></li>
-              <li><a class="{{ 'dropdown-item active' if active_page == 'tour_recommendation' else 'dropdown-item' }}" href="{{ url_for('public_app.tour_recommendation') }}">Rekomendasi Wisata</a></li>
+              <li>
+                <a
+                  class="{{ 'dropdown-item active' if active_page == 'tour_list' else 'dropdown-item' }}"
+                  href="{{ url_for('public_app.tour_list') }}"
+                  >Daftar Wisata</a
+                >
+              </li>
+              <li>
+                <a
+                  class="{{ 'dropdown-item active' if active_page == 'tour_recommendation' else 'dropdown-item' }}"
+                  href="{{ url_for('public_app.tour_recommendation') }}"
+                  >Rekomendasi Wisata</a
+                >
+              </li>
             </ul>
           </li>
           <li class="nav-item py-2 py-lg-1">
@@ -37,24 +95,60 @@
         <ul class="navbar-nav">
           {% if current_user.is_authenticated %}
           <li class="nav-item dropdown">
-            <a class="nav-link text-body" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            <a
+              class="nav-link text-body"
+              href="#"
+              role="button"
+              data-bs-toggle="dropdown"
+              aria-expanded="false"
+            >
               <div class="d-flex align-items-center column-gap-2">
-                <svg xmlns="http://www.w3.org/2000/svg" height="1.5em" fill="currentColor" viewBox="0 0 16 16">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  height="1.5em"
+                  fill="currentColor"
+                  viewBox="0 0 16 16"
+                >
                   <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0" />
-                  <path fill-rule="evenodd" d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8m8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1" />
+                  <path
+                    fill-rule="evenodd"
+                    d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8m8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1"
+                  />
                 </svg>
                 <p class="mb-0">{{ current_user.name }}</p>
               </div>
             </a>
             <ul class="dropdown-menu dropdown-menu-end">
-              <li><a class="dropdown-item" href="{{ url_for('control_panel_app.profile', id=current_user.id) }}">Profil</a></li>
-              <li><a class="dropdown-item" href="{{ url_for('control_panel_app.logout') }}">Keluar</a></li>
+              <li>
+                <a
+                  class="dropdown-item"
+                  href="{{ url_for('control_panel_app.profile', id=current_user.id) }}"
+                  >Profil</a
+                >
+              </li>
+              <li>
+                <a
+                  class="dropdown-item"
+                  href="{{ url_for('control_panel_app.logout') }}"
+                  >Keluar</a
+                >
+              </li>
             </ul>
           </li>
           {% else %}
           <li class="nav-item my-auto">
-            <a class="btn btn-outline-dark rounded-5 py-1 px-3" href="{{ url_for('control_panel_app.login') }}" role="button">Masuk</a>
-            <a class="btn btn-dark rounded-5 py-1 px-3" href="{{ url_for('control_panel_app.register') }}" role="button">Daftar</a>
+            <a
+              class="btn btn-outline-dark rounded-5 py-1 px-3"
+              href="{{ url_for('control_panel_app.login') }}"
+              role="button"
+              >Masuk</a
+            >
+            <a
+              class="btn btn-dark rounded-5 py-1 px-3"
+              href="{{ url_for('control_panel_app.register') }}"
+              role="button"
+              >Daftar</a
+            >
           </li>
           {% endif %}
         </ul>
