--- a/app/templates/public/services/tour_recommendation/tour-recommendation_result.html
+++ b/app/templates/public/services/tour_recommendation/tour-recommendation_result.html
@@ -1,4 +1,5 @@
-{% extends 'components/public/base.html' %} {% set active_page = 'tour_recommendation' %} {% block content %}
+{% extends 'components/public/base.html' %} {% set active_page =
+'tour_recommendation' %} {% block content %}
 <!-- Banner -->
 <div class="banner d-flex bg-hero h-20rem">
   <div class="container my-auto">
@@ -20,9 +21,19 @@
       <div class="col-lg-10">
         <div class="d-flex flex-column row-gap-3">
           <nav aria-label="breadcrumb">
-            <ol class="breadcrumb justify-content-center align-items-center mb-0">
-              <li class="breadcrumb-item"><a class="link-dark link-offset-2 link-underline-opacity-0 link-underline-opacity-100-hover" href="{{ url_for('public_app.services') }}">Layanan</a></li>
-              <li class="breadcrumb-item active" aria-current="page">Rekomendasi Wisata</li>
+            <ol
+              class="breadcrumb justify-content-center align-items-center mb-0"
+            >
+              <li class="breadcrumb-item">
+                <a
+                  class="link-dark link-offset-2 link-underline-opacity-0 link-underline-opacity-100-hover"
+                  href="{{ url_for('public_app.services') }}"
+                  >Layanan</a
+                >
+              </li>
+              <li class="breadcrumb-item active" aria-current="page">
+                Rekomendasi Wisata
+              </li>
             </ol>
           </nav>
         </div>
@@ -31,7 +42,10 @@
     <div class="row justify-content-center align-items-center py-5">
       <div class="col-lg-7">
         {% if error_message %}
-        <div class="alert alert-danger shadow-sm rounded-3 text-center mb-4" role="alert">
+        <div
+          class="alert alert-danger shadow-sm rounded-3 text-center mb-4"
+          role="alert"
+        >
           <p class="mb-0">{{ error_message }}</p>
         </div>
         {% else %}
@@ -41,10 +55,18 @@
               <table class="table table-striped table-hover w-full mb-0">
                 <thead>
                   <tr>
-                    <th class="align-middle text-center" style="width: 10%">Ranking</th>
-                    <th class="align-middle text-center" style="width: 20%">Skor</th>
-                    <th class="align-middle text-start" style="width: 50%">Nama Objek Wisata</th>
-                    <th class="align-middle text-center" style="width: 20%">Aksi</th>
+                    <th class="align-middle text-center" style="width: 10%">
+                      Ranking
+                    </th>
+                    <th class="align-middle text-center" style="width: 20%">
+                      Skor
+                    </th>
+                    <th class="align-middle text-start" style="width: 50%">
+                      Nama Objek Wisata
+                    </th>
+                    <th class="align-middle text-center" style="width: 20%">
+                      Aksi
+                    </th>
                   </tr>
                 </thead>
                 <tbody>
@@ -52,9 +74,16 @@
                   <tr>
                     <th class="align-middle text-center">{{ item.ranking }}</th>
                     <td class="align-middle text-center">{{ item.score }}</td>
-                    <td class="align-middle text-start">{{ item.tour_object }}</td>
+                    <td class="align-middle text-start">
+                      {{ item.tour_object }}
+                    </td>
                     <td class="align-middle text-center">
-                      <a class="btn btn-dark rounded-5 py-1 px-3" href="{{ url_for('public_app.tour_list_detail', id=item.action) }}" target="_blank">Lihat</a>
+                      <a
+                        class="btn btn-dark rounded-5 py-1 px-3"
+                        href="{{ url_for('public_app.tour_list_detail', id=item.action) }}"
+                        target="_blank"
+                        >Lihat</a
+                      >
                     </td>
                   </tr>
                   {% endfor %}
@@ -65,7 +94,12 @@
         </div>
         {% endif %}
         <div class="d-grid">
-          <a class="btn btn-dark rounded-5" href="{{ url_for('public_app.tour_recommendation') }}" role="button">Kembali</a>
+          <a
+            class="btn btn-dark rounded-5"
+            href="{{ url_for('public_app.tour_recommendation') }}"
+            role="button"
+            >Kembali</a
+          >
         </div>
       </div>
     </div>
